<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Info">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">


                    <TextView
                        android:id="@+id/bywho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wheater_provider"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_marginBottom="10dp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/openSource" />


                    <Button
                        android:id="@+id/site"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/jjewuz_site" />

                    <Button
                        android:id="@+id/rateweather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/rate" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                style="?attr/materialCardViewFilledStyle"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/dev"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:id="@+id/github_profile"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:padding="5dp"
                            android:src="@drawable/github" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/github_profile"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="?colorPrimary"
                        android:gravity="center"
                        android:text="@string/socialtxt"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/tgbtn"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_marginEnd="15dp"
                            android:background="@drawable/buttonc"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/tg"
                            app:tint="?colorSurface" />

                        <ImageButton
                            android:id="@+id/vkbtn"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:background="@drawable/buttonc"
                            android:scaleType="fitXY"
                            app:tint="?colorSurface"
                            app:srcCompat="@drawable/vk" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="1.0.0 (1)"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>