<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        android:clickable="true"
        style="?attr/materialCardViewFilledStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:startIconDrawable="@drawable/search"
                app:startIconContentDescription="Search icon"
                android:layout_height="wrap_content"
                android:hint="@string/city_enter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ListView
                android:id="@+id/city_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:layout_gravity="center_vertical"
            style="?attr/materialCardViewFilledStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:text="@string/notu"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_height="wrap_content">

            </TextView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"
                app:tint="?colorPrimary"
                android:contentDescription="right arrow" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:layout_gravity="center_vertical"
            style="?attr/materialCardViewFilledStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="match_parent"
                    android:id="@+id/use_f"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/use_f"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>